--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.4",
     "@supabase/supabase-js": "^2.77.0",
     "next": "16.0.1",
     "react": "19.2.0",
